Update post layout
  * Add post date to header
  * Update element spacing

--- a/_posts/2013-09-24-test.md
+++ b/_posts/2013-09-24-test.md
@@ -1,9 +1,7 @@
 ---
 layout: post
-title: test
+title: This is a Sample Post
 ---
-
-
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pharetra
 metus semper, gravida justo id, vestibulum urna. Praesent ac consequat elit. Nam
